--- a/.env
+++ b/.env
@@ -12,11 +12,11 @@ AUTHENTIK_EMAIL__TIMEOUT=10
 # Email address authentik will send from, should have a correct @domain
 AUTHENTIK_EMAIL__FROM=authentik@localhost
 
-# Authentik secret key
+# Authentik secret key (generate a new one for production)
 AUTHENTIK_SECRET_KEY=33fDU72H3LmCBw36izY8jUYF32qbM3
 
-# Redis password
+# Redis password (generate a new one for production)
 REDIS_PWD=NaF5nCj8Jtm6L4LLmLtP6WMzjiQh38
 
-# PostgreSQL password
+# PostgreSQL password (generate a new one for production)
 PSQL_PWD=ZUY56ujmzSXW8nZvjwfn4kwCA9zgwM
