--- a/.env
+++ b/.env
@@ -12,6 +12,9 @@ AUTHENTIK_EMAIL__TIMEOUT=10
 # Email address authentik will send from, should have a correct @domain
 AUTHENTIK_EMAIL__FROM=authentik@localhost
 
+# Authentik host URL
+AUTHENTIK_HOST=https://sso.example.org
+
 # Authentik secret key (generate a new one for production)
 AUTHENTIK_SECRET_KEY=33fDU72H3LmCBw36izY8jUYF32qbM3
 
