--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ x-authentik-common-env: &authentik-common-env
   AUTHENTIK_EMAIL__TIMEOUT: ${AUTHENTIK_EMAIL__TIMEOUT}
   AUTHENTIK_EMAIL__FROM: ${AUTHENTIK_EMAIL__FROM}
 
+name: authentik
 services:
   authentik-redis:
     container_name: authentik-redis
