--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,14 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+    command:
+      - postgres
+      - -c
+      - log_min_messages=warning
+      - -c
+      - client_min_messages=warning
+      - -c
+      - log_checkpoints=off
   authentik-server:
     command: server
     container_name: authentik-server
